# lol-nuzlocke

./: .gitignore  README.md  dockerfile  readme.md
.github/workflows/: build.yaml  deploy.yaml  dist.yaml
backend/: pyproject.toml
backend/src/: app.py
backend/src/community_dragon/: api.py  constants.py
backend/src/lol_nuzlocke_backend/: app.py  community_dragon.py  constants.py  exceptions.py
backend/src/lol_nuzlocke_backend/cdragon/: client.py
backend/src/lol_nuzlocke_backend/model/: champion.py  champion_detail.py
backend/src/lol_nuzlocke_backend/wiki/: lanes.py  roles.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  champion.js  champions.js  index.css  index.js  main.jsx
frontend/src/components/: Champion.jsx  Champions.jsx  NavBar.jsx  Role.jsx  Roles.jsx  RollResult.jsx  champion.jsx  championContainer.jsx  champions.jsx  navbar.jsx
frontend/src/routes/: champions.jsx  error.jsx  root.jsx  rules.jsx
