[tool.poetry]
name = "lol-nuzlocke-backend"
version = "0.1.0"
description = "Backend for lol-nuzlocke site"
authors = ["furnapso <luke.boland95@gmail.com>"]
readme = "README.md"
packages = [{include = "lol_nuzlocke_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
pylint = "^2.17.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
