[tool.poetry]
name = "lol-nuzlocke-backend"
version = "0.1.0"
description = ""
authors = ["furnapso <luke.boland95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
requests = "^2.31.0"
marshmallow-dataclass = "^8.5.14"
pydantic = "^1.10.9"
humps = "^0.2.2"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pyright = "^1.1.314"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy-lol_nuzlocke_backend]
ignore_missing_imports = true